--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Launch Edge against localhost",
             "url": "",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${file}"
         }
     ]
 }
