--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,7 @@
             "type": "edge",
             "request": "launch",
             "name": "Launch Edge against localhost",
-            "url": "",
-            "webRoot": "${file}"
+            "url": "http://localhost:5500"
         }
     ]
 }
